--- a/join.html
+++ b/join.html
@@ -21,6 +21,47 @@
 * {
   box-sizing: border-box;
 }
+  /* Mobile Optimization */
+@media (max-width: 480px) {
+  .card {
+    padding: 2rem 1.5rem;
+    border-radius: 20px;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    letter-spacing: 0.1em;
+  }
+
+  .sub {
+    font-size: 0.85rem;
+  }
+
+  .ring {
+    width: 80px;
+    height: 80px;
+  }
+
+  button,
+  .cta a {
+    padding: 1rem;
+    font-size: 0.85rem;
+    letter-spacing: 0.1em;
+  }
+
+  .power span {
+    font-size: 0.55rem;
+  }
+
+  .code-box {
+    padding: 1.2rem;
+  }
+
+  .rule p {
+    font-size: 0.8rem;
+  }
+}
+
 
 body {
   margin: 0;
@@ -297,3 +338,4 @@ form.addEventListener("submit", function(e) {
 
 </body>
 </html>
+
