--- a/inner-circle.html
+++ b/inner-circle.html
@@ -16,7 +16,47 @@
   --orange: #ff7a18;
   --orange-soft: rgba(255,122,24,0.15);
   --green: #25D366;
+}/* Mobile Optimization */
+@media (max-width: 480px) {
+  .card {
+    padding: 2rem 1.5rem;
+    border-radius: 20px;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    letter-spacing: 0.1em;
+  }
+
+  .sub {
+    font-size: 0.85rem;
+  }
+
+  .ring {
+    width: 80px;
+    height: 80px;
+  }
+
+  button,
+  .cta a {
+    padding: 1rem;
+    font-size: 0.85rem;
+    letter-spacing: 0.1em;
+  }
+
+  .power span {
+    font-size: 0.55rem;
+  }
+
+  .code-box {
+    padding: 1.2rem;
+  }
+
+  .rule p {
+    font-size: 0.8rem;
+  }
 }
+
 
 * {
   box-sizing: border-box;
@@ -223,3 +263,4 @@ h1 {
 
 </body>
 </html>
+
