--- a/index.html
+++ b/index.html
@@ -73,4 +73,267 @@ body::before {
   position: absolute;
   inset: 10px;
   border-radius: 50%;
-  border:
+  border: 1px dashed rgba(255,122,24,0.3);
+}
+
+.brand {
+  text-align: center;
+  letter-spacing: 0.35em;
+  font-size: 0.7rem;
+  color: var(--orange);
+  margin-bottom: 0.5rem;
+}
+
+h1 {
+  text-align: center;
+  font-size: 1.8rem;
+  letter-spacing: 0.2em;
+  margin: 0.5rem 0;
+}
+
+.sub {
+  text-align: center;
+  font-size: 0.9rem;
+  color: var(--muted);
+  margin-bottom: 1.8rem;
+}
+
+.power {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.6rem;
+  letter-spacing: 0.2em;
+  color: var(--orange);
+  margin-bottom: 1.5rem;
+}
+
+/* Form */
+label {
+  display: block;
+  margin-top: 1.1rem;
+  margin-bottom: 0.4rem;
+  font-size: 0.85rem;
+  color: var(--muted);
+}
+
+input, select {
+  width: 100%;
+  padding: 0.8rem;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255,0.1);
+  background: #0b0b0b;
+  color: var(--ink);
+  font-size: 0.9rem;
+}
+
+input:focus, select:focus {
+  outline: none;
+  border-color: var(--orange);
+  box-shadow: 0 0 0 1px var(--orange-soft);
+}
+
+button {
+  margin-top: 2rem;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 18px;
+  border: none;
+  background: linear-gradient(135deg, #ff7a18, #ffb347);
+  color: #000;
+  font-weight: 800;
+  letter-spacing: 0.2em;
+  cursor: pointer;
+  box-shadow: 0 10px 30px rgba(255,122,24,0.4);
+}
+
+button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 14px 40px rgba(255,122,24,0.55);
+}
+
+/* States */
+.denied, .granted {
+  display: none;
+  text-align: center;
+}
+
+.denied h2 {
+  color: #ff4d4d;
+  letter-spacing: 0.2em;
+}
+
+.granted h2 {
+  color: var(--orange);
+  letter-spacing: 0.25em;
+}
+
+.granted p {
+  color: var(--muted);
+  margin-bottom: 1.8rem;
+}
+
+.granted a {
+  display: block;
+  padding: 1.1rem;
+  background: var(--green);
+  color: #000;
+  text-decoration: none;
+  border-radius: 20px;
+  font-weight: 900;
+  letter-spacing: 0.15em;
+}
+
+/* Footer */
+.footer {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 0.6rem;
+  letter-spacing: 0.3em;
+  color: #555;
+}
+
+/* Mobile Optimization */
+@media (max-width: 480px) {
+  .card {
+    padding: 2rem 1.5rem;
+    border-radius: 20px;
+  }
+
+  h1 {
+    font-size: 1.4rem;
+    letter-spacing: 0.1em;
+  }
+
+  .ring {
+    width: 70px;
+    height: 70px;
+  }
+
+  .power span {
+    font-size: 0.5rem;
+  }
+
+  button, .granted a {
+    font-size: 0.8rem;
+    letter-spacing: 0.1em;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="card">
+
+  <div id="formSection">
+    <div class="ring"></div>
+
+    <div class="brand">EQUINOX × MENWHOMOVE</div>
+    <h1>THE GATE</h1>
+    <div class="sub">
+      This is not a group. This is a filter.  
+      Only men chasing <b>money, power, and control</b> cross this line.
+    </div>
+
+    <div class="power">
+      <span>WEALTH</span>
+      <span>STATUS</span>
+      <span>INFLUENCE</span>
+      <span>DOMINION</span>
+    </div>
+
+    <!-- NETLIFY FORM (STATIC, DETECTABLE AT BUILD TIME) -->
+    <form
+      name="menwhomove-gate"
+      method="POST"
+      data-netlify="true"
+      netlify-honeypot="bot-field"
+      id="gateForm"
+    >
+      <!-- Required hidden input -->
+      <input type="hidden" name="form-name" value="menwhomove-gate" />
+
+      <!-- Spam honeypot -->
+      <p style="display:none;">
+        <label>
+          Don’t fill this out if you’re human:
+          <input name="bot-field" />
+        </label>
+      </p>
+
+      <label>Why do you want more than your current life can offer?</label>
+      <input type="text" name="reason" required />
+
+      <label>Where are you losing control right now?</label>
+      <select name="stuck" required>
+        <option value="">Select one</option>
+        <option>Money</option>
+        <option>Discipline</option>
+        <option>Purpose</option>
+        <option>Body</option>
+        <option>Relationships</option>
+      </select>
+
+      <label>Will you execute daily, even when no one is watching?</label>
+      <select id="commitment" name="commitment" required>
+        <option value="">Select one</option>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <button type="submit">CLAIM ACCESS</button>
+    </form>
+  </div>
+
+  <div class="denied" id="denied">
+    <h2>DENIED</h2>
+    <p>
+      Comfort is expensive.  
+      Stay where you are — or come back hungry.
+    </p>
+  </div>
+
+  <div class="granted" id="granted">
+    <h2>ACCESS GRANTED</h2>
+    <p>
+      You are now inside a circle built for <b>builders, earners, and leaders.</b>
+    </p>
+    <a href="/inner-circle.html">
+      ENTER INNER CIRCLE
+    </a>
+  </div>
+
+  <div class="footer">
+    EQUINOX SYSTEMS — POWER. MONEY. MOTION.
+  </div>
+
+</div>
+
+<script>
+const form = document.getElementById("gateForm");
+const commitment = document.getElementById("commitment");
+const denied = document.getElementById("denied");
+const granted = document.getElementById("granted");
+const formSection = document.getElementById("formSection");
+
+form.addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  // Proper Netlify-compatible submission
+  fetch("/", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: new URLSearchParams(new FormData(form)).toString()
+  }).catch(() => {});
+
+  formSection.style.display = "none";
+
+  if (commitment.value === "yes") {
+    granted.style.display = "block";
+  } else {
+    denied.style.display = "block";
+  }
+});
+</script>
+
+</body>
+</html>
