--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ button:hover {
     <p>
       You are now inside a circle built for <b>builders, earners, and leaders.</b>
     </p>
-    <a href="/inner-circle.html">
+    <a href="https://chat.whatsapp.com/IQj0Dfob3rOGimdsUt2GsR">
       ENTER INNER CIRCLE
     </a>
   </div>
